--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -8,11 +8,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.rayhane.myrepos.view.MainActivity">
+    tools:context="org.rayhane.myrepos.view.MainActivity"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <android.support.v7.widget.RecyclerView
     android:id="@+id/repos_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="307dp"
+        android:layout_weight="0.75" />
 
-</FrameLayout>
+    <Button
+        android:text="Load Repos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button3"
+        android:background="@color/colorPrimary"
+        android:onClick="onClick"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        android:layout_marginTop="20dp" />
+
+</LinearLayout>
