--- a/app/src/main/res/layout/list_item_repo.xml
+++ b/app/src/main/res/layout/list_item_repo.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="90dp"
-        android:layout_weight="0.92"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
@@ -19,19 +19,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:paddingRight="16dp"
-            android:paddingLeft="16dp"
-
             android:textStyle="bold"
+            android:textColor="@color/colorBlack"
             android:textSize="16sp" />
-
 
         <TextView
             android:id="@+id/repo_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="16dp"
-            android:paddingLeft="16dp" />
+            android:textColor="@color/colorGreyLight"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
